tests/ui/feature-gates/unknown-feature.stderr
error[E0635]: unknown feature `unknown_crablang_feature`
  --> $DIR/unknown-feature.rs:1:12
   |
LL | #![feature(unknown_crablang_feature)]
   |            ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0635`.
