tests/ui/feature-gates/unknown-feature.rs
#![feature(unknown_crablang_feature)] //~ ERROR unknown feature

fn main() {}
